# sifis-generate

./: Cargo.toml  README.md
.github/workflows/: deploy.yml  sifis-generate.yml  sifis-tool.yml
.reuse/: dep5
fuzz/: Cargo.toml
src/: cargo.rs  filters.rs  lib.rs  meson.rs  setuptools.rs
src/toolchain/: cargo.rs  maven.rs  meson.rs  mod.rs  poetry.rs  yarn.rs
templates/: dep5
templates/cargo/: .gitlab-ci.yml  Dockerfile-amd64  Dockerfile-arm64  README.md  cargo-fuzz.toml  github-compact.yml  github-deploy.yml  github-docker-application.yml  github-macos.yml  github-ubuntu.yml  github-windows.yml  github.yml  memory-checks-macos.yml  memory-checks-ubuntu.yml  memory-checks-windows.yml
templates/maven/: Entry.java  Example.java  README.md  github.yml  pom.xml
templates/meson/: .gitlab-ci.yml  Dockerfile  bin  ci.yml  cli.build  docker-compose.yml  github.yml  gitlab-ci.yml  header  lib  lib.build  root.build  run_tests.sh  test  tests.build
templates/poetry/: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  __init__.py  __main__.py  github.yml  pyproject.toml  test_sum.py
templates/setuptools/: .gitlab-ci.yml  __main__.py  github.yml  pyproject.toml  setup.cfg  setup.py  test.py
templates/yarn/: .gitlab-ci.yml  github.yml
