[package]
name = "sifis-generate"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Generate a new project for some build systems with the use of templates."
repository = "https://github.com/sifis-home/sifis-generate"
homepage = "https://github.com/sifis-home/sifis-generate"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
license = "3"
minijinja = { version = "0.30", features = ["source"] }
serde = { version = "1", features = ["derive"] }
textwrap = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
codegen-units = 1
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "unwind"
strip = "debuginfo"
