[metadata]
name = {{ name }}
author = Name Surname
author_email = email-name@email.com
version = 0.0
description = "Description of your tool"
long_description = file: README.md, LICENSE.md
url = https://url-to-your-repository.com
license = {{ license.id }}
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: {{ license.id }}
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = True
python_requires = >=3.9
package_dir =
    {{ name }} = {{ name }}
packages = find:
install_requires =
    

[options.package_data]
{{ name }} = data/*

[options.entry_points]
console_scripts =
    {{ name }} = {{ name }}.__main__:main
    
[options.extras_require]
develop =
    mypy
    pytest
